--- a/WindowsFormsApp1/src/styles.css
+++ b/WindowsFormsApp1/src/styles.css
@@ -1,75 +1,95 @@
-﻿/*body {
-    margin-top: 50px;*/
-/*    align-items: center;
-    align-content: center;*/
-/*}*/
-
-.container {
-    padding-top: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+﻿body {
+    
     width: 100%;
-    /*display: block;*/
     height: 100%;
 }
 
-table {
-    /*padding-top: 50px;*/
-    width: 100%;
-    border-collapse: collapse;
+.container {
+    /* padding-top: 20%; */
+/*    display: flex;*/
+    /* justify-content: ; */
     align-items: center;
-    /*align-items: center;*/
+/*    flex-direction: column;*/
+    width: 100%;
+    height: 100%;
+}
+
+.titleWrapper {
+    height: 30px;
+    text-align: center;
+    width: 100%;
+}
+
+    .titleWrapper p {
+        font-size: 18px;
+    }
+
+.countFindRowsWrapper {
+    height: 30px;
+    align-items: start;
+    padding: 0 10px 20px 10px;
+    width: 100%;
+}
+
+    .countFindRowsWrapper p {
+        font-size: 18px;
+        text-align: left;
+    }
+
+
+.table {
+    /*padding-top: 50px;*/
+    width: 96%;
+    height: auto;
+    border-collapse: collapse;
+    /* align-items: center; */
+/*    display: flex;
+    flex-direction: column;*/
+/*    justify-content: baseline;*/
+    /* justify-content: center; */
+    align-items: center;
     /*background-color: red;*/
 }
 
-tr {
+/* tr {
     height: 100px;
-}
+} */
 
-td {
+.tbRow {
     border: 1px solid #a9a6a6;
     text-align: left;
-}
-
-.title {
-    /*padding: 10px;*/
-    padding: 10px 0px 0px 10px;
-    font-size: 20px;
-    text-align: center;
-}
-
-.countFindRows {
-    padding: 0px 0px 10px 10px;
-    font-size: 20px;
-    text-align: left;
-}
-.tbRow {
-    padding: 8px;
+    width: 100%;
+    /* max-height: 150px;
+    min-height: 20px; */
+    padding: 10px;
 }
 
 span {
-    /*    overflow-wrap: break-word;
-    white-space: normal;*/
     display: block;
+}
+
+.buttonWrapper {
+    /*display: block;*/
+    margin-top: 3%;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    /*align-content: center;*/
+    /*    justify-content: center;*/
 }
 
 a.loadMoreButton {
     /*margin: 15px;*/
+    /*    padding: 1px 6px;*/
     
-   /* padding: 1px 6px;*/
     border: 1px outset;
     border-radius: 3px;
-    color: buttontext;
-    background-color: buttonface;
+    padding: 10px;
     text-decoration: none;
+    /*    background-color: darkgreen;
+     color: buttontext;
+    background-color: buttonface; 
+    text-decoration: none;*/
 }
 
-.buttonWrapper {
-    display: flex;
-    height: 100px;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-}
