--- a/WindowsFormsApp1/src/styles.css
+++ b/WindowsFormsApp1/src/styles.css
@@ -5,11 +5,7 @@
 }
 
 .container {
-    /* padding-top: 20%; */
-/*    display: flex;*/
-    /* justify-content: ; */
     align-items: center;
-/*    flex-direction: column;*/
     width: 100%;
     height: 100%;
 }
@@ -38,29 +34,16 @@
 
 
 .table {
-    /*padding-top: 50px;*/
     width: 96%;
     height: auto;
     border-collapse: collapse;
-    /* align-items: center; */
-/*    display: flex;
-    flex-direction: column;*/
-/*    justify-content: baseline;*/
-    /* justify-content: center; */
     align-items: center;
-    /*background-color: red;*/
 }
-
-/* tr {
-    height: 100px;
-} */
 
 .tbRow {
     border: 1px solid #a9a6a6;
     text-align: left;
     width: 100%;
-    /* max-height: 150px;
-    min-height: 20px; */
     padding: 10px;
 }
 
@@ -69,27 +52,18 @@ span {
 }
 
 .buttonWrapper {
-    /*display: block;*/
     margin-top: 3%;
     height: 100px;
     width: 100%;
     text-align: center;
     align-items: center;
-    /*align-content: center;*/
-    /*    justify-content: center;*/
 }
 
 a.loadMoreButton {
-    /*margin: 15px;*/
-    /*    padding: 1px 6px;*/
-    
     border: 1px outset;
     border-radius: 3px;
     padding: 10px;
     text-decoration: none;
-    /*    background-color: darkgreen;
-     color: buttontext;
-    background-color: buttonface; 
-    text-decoration: none;*/
+    /*    background-color: darkgreen;*/
 }
 
